[project]
name = "elastic-observability-agentic-test-explorer"
version = "0.1.0"
description = "Elastic Observability Agentic Test Explorer"
requires-python = ">=3.11"
dependencies = [
    "langchain~=1.2.15",
    "langchain-google-genai~=4.2.1",
    "langchain-community~=0.4.1",
    "langchain-core~=1.3.0",
    "langgraph~=1.1.9",
    "playwright~=1.58.0",
    "python-dotenv~=1.2.2",
    "pyyaml~=6.0.1",
    "pillow~=12.2.0",
    "langchain-mcp-adapters~=0.2.2",
    "langgraph-checkpoint-sqlite~=3.0.3",
    "aiosqlite~=0.22.1",
    "httpx~=0.28.1",
]

[project.scripts]
agent-explorer = "agentic_explorer.main:main"
agent-auth = "agentic_explorer.auth_setup:main"
agent-setup-skills = "agentic_explorer.tools.skills.setup_skills:main"
